# julienpillaud

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Justfile  compose-dev.yaml  compose-test.yaml  compose.yaml  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  tests.yml
app/api/: app.py  dependencies.py  exceptions.py  handlers.py  middlewares.py  router.py  security.py  utils.py
app/api/admin/: router.py
app/api/auth/: router.py  utils.py
app/api/dependencies/: app.py  user.py
app/api/resume/: router.py
app/api/skills/: router.py
app/core/: app.py  context.py  settings.py
app/core/logging/: config-dev.json  config.json  formatter.py
app/domain/: cache_manager.py  context.py  data.py  entities.py  exceptions.py  pdf_converter.py  repository.py  service.py  utils.py
app/domain/admin/: commands.py  entities.py
app/domain/auth/: commands.py  entities.py  repository.py
app/domain/resume/: commands.py  entities.py
app/domain/skills/: commands.py  entities.py  repository.py
app/domain/skills/commands/: categories.py  skills.py
app/domain/users/: commands.py  entities.py  repository.py
app/infrastructure/: cache_manager.py  client.py  logger.py  pdf_converter.py  repository.py  utils.py
app/infrastructure/mongo_repository/: client.py  refresh_tokens.py  repository.py  skills.py  users.py  utils.py
app/static/css/: main.css
app/static/js/: init-theme.js  main.js  skills.js
app/static/js/skills/: categories.js  main.js  skills.js
app/templates/: _card_education.html  _card_experiences.html  _card_infos.html  _card_languages.html  _card_project.html  _card_skills.html  _content.html  _swap_theme.html  admin.html  base.html  cv.html  error.html  login.html  navbar.html  skills.html  skills_content.html  temp.html
app/templates/html/: _card_experiences.html  _card_infos.html  _navbar.html  _swap_theme.html  cv.html
app/templates/pdf/: _card_experiences.html  _card_infos.html  cv.html
app/templates/resume/: base.html  card_education.html  card_experiences.html  card_infos.html  card_languages.html  card_skills.html  content.html  navbar.html  pdf.html
scripts/: migration.py  users.py
tests/: conftest.py
tests/api/: test_auth_router.py  test_skills_router.py
tests/api/auth/: test_auth.py  test_login.py  test_logout.py
tests/factories/: skills.py
tests/plugins/: database.py  factories.py  http.py
