[project]
name = "julienpillaud"
# use dynamic version to avoid sync issues with uv.lock after 'release-please'
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]==0.136.1",
    "logfire[fastapi,pymongo,redis]==4.33.0",
    "pwdlib[argon2]==0.3.0",
    "pyjwt==2.12.1",
    "pymongo==4.17.0",
    "redis==7.4.0",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pytest==9.0.3",
    "ruff==0.15.12",
    "ty==0.0.35",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PL", # Pylint
    "RUF",
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401", # any-type
    "SIM117", # multiple-with-statements
]

[tool.ty.terminal]
output-format = "concise"

[tool.mypy]
strict = true
disable_error_code = [
    # Decorators on top of @property are not supported,
    # but pydantic use it
    "prop-decorator",
    "unused-ignore",
]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "info"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
